# scgms_cho_module

./: .gitignore  CMakeLists.txt  README.md
src/: SGSmooth.hpp  cho_detection.cpp  cho_detection.h  descriptor.cpp  descriptor.h  evaluation.cpp  evaluation.h  lstm_filter.cpp  lstm_filter.h  pa_detection.cpp  pa_detection.h  rnn.cpp  rnn.h  rnn_filter.cpp  rnn_filter.h  savgol_filter.cpp  savgol_filter.h  swl.h
src/ML/: SGSmooth.cpp  SGSmooth.hpp  ml.cpp  ml.h  rnn.cpp  rnn.h
src/ML/sklearn/: bnb.cpp
src/win/: cho_detection.def  detection.def
